--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/filters.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,5 +29,30 @@
             </div>
         </div>
     </nav>
+    <div class="side-bar">
+        <a href="#" class="links active"><img src="/img/icon/home.PNG" alt="">Home</a>
+        <a href="#" class="links"><img src="/img/icon/explore.PNG" alt="">Explore</a>
+        <a href="#" class="links"><img src="/img/icon/subscription.PNG" alt="">Subscription</a>
+        <hr class="seperator">
+        <a href="#" class="links"><img src="/img/icon/library.PNG" alt="">Library</a>
+        <a href="#" class="links"><img src="/img/icon/history.PNG" alt="">History</a>
+        <a href="#" class="links"><img src="/img/icon/your-video.PNG" alt="">Your Videos</a>
+        <a href="#" class="links"><img src="/img/icon/watch-later.PNG" alt="">Watch Later</a>
+        <a href="#" class="links"><img src="/img/icon/liked video.PNG" alt="">Liked Videos</a>
+        <a href="#" class="links"><img src="/img/icon/show more.PNG" alt="">Show More</a>
+    </div>
+
+    <div class="filters">
+        <button class="filter-options active">All</button>
+        <button class="filter-options">CSS</button>
+        <button class="filter-options">Web Development</button>
+        <button class="filter-options">Python</button>
+        <button class="filter-options">Entertainment</button>
+        <button class="filter-options">Marvel</button>
+        <button class="filter-options">Javascript</button>
+        <button class="filter-options">Artificial Intellegence</button>
+        <button class="filter-options">Machine Learning</button>
+        <button class="filter-options">Trending</button>
+    </div>
 </body>
 </html>
