--- a/html/index.html
+++ b/html/index.html
@@ -54,5 +54,13 @@
         <button class="filter-options">Machine Learning</button>
         <button class="filter-options">Trending</button>
     </div>
+    
+<div class="video-container" id="video-container" >
+
+        <div id="loading-spinner" class="spinner">
+            <div class="circle"></div>
+        </div>
+ </div>
+<script src="/js/home.js"></script>
 </body>
 </html>
